# Thunder

./: CMakeLists.txt  README.md  bootstrap_macos.sh  build.c
examples/basic/: CMakeLists.txt  dependencies.cmake
examples/basic/src/: main.c  main.flecs
examples/input/: CMakeLists.txt  dependencies.cmake
examples/input/src/: main.c
examples/testing/: CMakeLists.txt  dependencies.cmake
examples/testing/src/: main.c
examples/window/: CMakeLists.txt  dependencies.cmake
examples/window/src/: main.c
plugins/core/: CMakeLists.txt  dependencies.cmake
plugins/core/src/: main.c
plugins/flecs/: CMakeLists.txt  dependencies.cmake
plugins/glfw/: CMakeLists.txt  dependencies.cmake
plugins/log/: CMakeLists.txt  dependencies.cmake
plugins/log/include/log/: log.h
plugins/log/include/log/sinks/: file.h
plugins/log/src/: console.c  file.c  log.c
plugins/log_sink_console/: CMakeLists.txt  dependencies.cmake
plugins/log_sink_console/include/log/sinks/: console.h
plugins/log_sink_console/src/: console.c
plugins/log_sink_file/: CMakeLists.txt  dependencies.cmake
plugins/log_sink_file/include/log/sinks/: file.h
plugins/log_sink_file/src/: file.c
plugins/pthread_win32/: CMakeLists.txt  dependencies.cmake
plugins/test/: CMakeLists.txt  dependencies.cmake
plugins/test/src/: test.c  test.h
plugins/thunder_core/: CMakeLists.txt  dependencies.cmake
plugins/thunder_core/include/core/: cleanup.h  setup.h
plugins/thunder_input/: CMakeLists.txt  dependencies.cmake
plugins/thunder_input/include/input/: keys.h  module.h
plugins/thunder_input/src/: module.c
plugins/thunder_input_core/: CMakeLists.txt  dependencies.cmake
plugins/thunder_input_core/include/input/: input.h
plugins/thunder_input_core/src/: input.c
plugins/thunder_log/: CMakeLists.txt  dependencies.cmake
plugins/thunder_log/src/: log.c
plugins/thunder_log_sink_console/: CMakeLists.txt  dependencies.cmake
plugins/thunder_log_sink_file/: CMakeLists.txt  dependencies.cmake
plugins/thunder_windowing/: CMakeLists.txt  dependencies.cmake
plugins/thunder_windowing/include/windowing/: module.h
plugins/thunder_windowing/src/: module.c
plugins/thunder_windowing_core/: CMakeLists.txt  dependencies.cmake
plugins/windowing/: CMakeLists.txt  dependencies.cmake
plugins/windowing_core/: CMakeLists.txt  dependencies.cmake
plugins/windowing_core/include/windowing/: window.h
plugins/windowing_core/src/: window.c
src/c/include/: assert.h  ctype.h  errno.h  float.h  limits.h  locale.h  math.h  stddef.h
src/c/src/: assert.c  ctype.c  locale.c
src/c/src/math/: acos.c  asin.c  atan.c  atan2.c  common.h  cos.c  cosh.c  exp.c  fabs.c  floor.c  fmod.c  frexp.c  ldexp.c  log.c  log10.c  pow.c  sin.c  sinh.c  sqrt.c  tan.c  tanh.c
(+1 files in other folders)
